<resources>
    <string name="app_name">Personal Dashboard</string>
    <string name="login">Login</string>
    <string name="loginText">Login Here to Get Access</string>
    <string name="register">Register</string>
    <string name="registartionPage">My Dashboard is your best companion to check your bank activities. It offers tou a variety of services.</string>
    <string name="confirm">Confirm</string>
    <string name="registerText">Register and start using my app</string>


    <string name="action_location">My Location</string>
    <string name="action_settings">Settings</string>
    <string name="action_notes">Notes</string>
    <string name="action_logout">Logout</string>
    <string name="action_email">Email</string>
    <string name="action_calendar">Calendar</string>
    <string name="title_activity_location">LocationActivity</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="get_location">Get My Location</string>
    <string name="title_activity_email">EmailActivity</string>

    <string name="email_sending">Send An Email Now</string>
    <string name="compose_email">Compose Email</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_page_notes">PageNotesActivity</string>


    <string name="note_act">Take Notes Now</string>
    <string name="save_note">Save Note</string>
    <string name="view_note">View Note</string>

    <string name="title_activity_calendar">CalendarActivity</string>


</resources>