<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_location"
        android:icon="@drawable/baseline_my_location_black_24"
        android:orderInCategory="1"
        android:title="@string/action_location"
        app:showAsAction="always" />

    <item
     android:id="@+id/action_notes"
     android:icon="@drawable/baseline_notes_black_24"
     android:orderInCategory="1"
     android:title="@string/action_notes"
     app:showAsAction="always" />


    <item
     android:id="@+id/action_email"
     android:icon="@drawable/baseline_email_black_24"
     android:orderInCategory="1"
     android:title="@string/action_email"
     app:showAsAction="always" />

 <item
 android:id="@+id/action_settings"
 android:icon="@drawable/baseline_settings_applications_black_24"
 android:orderInCategory="150"
 android:title="@string/action_settings"
 app:showAsAction="never" />


    <item
        android:id="@+id/action_calendar"
        android:icon="@drawable/baseline_calendar_today_black_24"
        android:orderInCategory="11"
        android:title="@string/action_calendar"
        app:showAsAction="ifRoom" />

    <item


        android:id="@+id/action_logout"
     android:icon="@drawable/baseline_login_black_24"
     android:orderInCategory="100"
         android:onClick="logout"
     android:title="@string/action_logout"
     app:showAsAction="never" />



</menu>