<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/email"
    android:orientation="vertical"
    tools:context=".EmailActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/email_sending"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageButton"
        android:layout_alignRight="@+id/imageButton"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="#9C27B0"
        android:textSize="30dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"

        android:layout_marginTop="20dp"
        android:src="@drawable/icon" />

    <Button
        android:id="@+id/sendEmail"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/lightgray"
        android:onClick="sendEmail"
        android:text="@string/compose_email"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/twitter" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/instagram" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/facebook" />
    </LinearLayout>


</LinearLayout>