<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/elec1"
    android:hapticFeedbackEnabled="true"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/icon" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="@color/deeppurple"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/UserName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="@color/darkblue"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:background="#656565"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="#6A71FA" />


    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:text="@string/loginText"
        android:textColor="@color/lightgray" />


    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:onClick="register"
        android:text="@string/register"
        android:textColor="#4175DA" />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:text="@string/registerText"
        android:textColor="@color/lightgray" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/twitter" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/instagram" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/facebook" />
    </LinearLayout>

</RelativeLayout>