<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notes1"
    tools:context=".NoetesActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#83F1E0"
        android:text="@string/note_act"
        android:textColor="#6291E1"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/titlenote"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="30dp"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/description"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="122dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/post"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlenote"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="139dp"
        android:text="@string/save_note"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/darkblue" />

    <Button
        android:id="@+id/view"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/post"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="41dp"
        android:background="@color/testcolorblue"
        android:text="@string/view_note"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/twitter" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/instagram" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/facebook" />
    </LinearLayout>

</RelativeLayout>